[package]
name = "bluesky-worker"
version = "0.2.2"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.26"
html2text = "0.7.1"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.173"
serde_json = "1.0.103"
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
